@@ -597,9 +597,9 @@ pthread::cancel ()
     * open ()
     * openat ()
     * pause ()
-      poll ()
+    * poll ()
     * pread ()
-      pselect ()
+    * pselect ()
     * pthread_cond_timedwait ()
     * pthread_cond_wait ()
     * pthread_join ()
@@ -612,7 +612,7 @@ pthread::cancel ()
     * recv ()
     * recvfrom ()
     * recvmsg ()
-      select ()
+    * select ()
     * sem_timedwait ()
     * sem_wait ()
     * send ()
