@@ -1,5 +1,15 @@
 2011-05-03  Corinna Vinschen  <corinna@vinschen.de>
 
+	* select.cc (cygwin_select): Make degenerate case cancelable.
+	(select_stuff::destroy): New inline method to delete memory taken
+	by select_stuff.
+	(select_stuff::~select_stuff): Call destroy.
+	(select_stuff::wait): Add case to allow canceling select.
+	* select.h (select_stuff::destroy): Declare.
+	* thread.cc: Mark poll, pselect and poll as cancelable.
+
+2011-05-03  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler.cc (fhandler_base_overlapped::wait_overlapped): Make
 	cancelable.  Remove test for main thread, always add signal_arrived
 	to waited objects.
